Fix vertical alignment issues

--- a/app/assets/styl/main.styl
+++ b/app/assets/styl/main.styl
@@ -5,7 +5,9 @@ reset-html5()
 font-main = sans-serif
 font-icons = 'wkline-icons'
 width = 100%
-height = 26px
+raw-height = 26px
+border-width = 1px
+height = raw-height - (border-width * 2)
 progress-size = 50px
 urgent-color = #f30
 error-col = #d32
@@ -65,7 +67,6 @@ html, body
 	font-weight: normal
 	height: height
 	line-height: height
-	vertical-align: middle
 	-webkit-background-clip: text
 	-webkit-text-fill-color: transparent
 
@@ -97,13 +98,13 @@ html, body
 	position: relative
 	z-index: 11
 	width: width
-	height: height - 2px
+	height: height
+	line-height: height
 	color: #fff
 	.widget, div, ul, li, span
 		display: inline-block
 		vertical-align: top
 		white-space: nowrap
-		line-height: height - 1px
 	#left
 		float: left
 		& > div:not(:first-child),
@@ -268,13 +269,11 @@ html, body
 			.total_time
 				font-size: 10px
 				opacity: .8
-				vertical-align: middle
 				&:before
 					content: ' / '
 		.progress
 			margin: 0 10px
 		.song
-			height: height
 			overflow: hidden
 			text-overflow: clip
 			.artist
@@ -302,9 +301,8 @@ html, body
 				background-color: error-col
 	&#weather
 		.icon
-			height: height - 4px
-			width: height - 4px
-			vertical-align: middle
+			margin: 2px 0 0 0
+			height: height - 2px
 		.temp
 			margin: 0 0 0 5px
 			&.c::after
@@ -323,7 +321,6 @@ html, body
 	&#battery
 		.icon
 			font-size: 19px
-			margin-top: -2px
 		.percentage
 			margin: 0 0 0 10px
 		.time_left
